--- a/package.json
+++ b/package.json
@@ -10,8 +10,28 @@
     "test": "jest"
   },
   "dependencies": {
+    "@emotion/native": "^11.11.0",
+    "@emotion/react": "^11.11.1",
+    "@react-native-async-storage/async-storage": "1.19.5",
+    "@react-navigation/bottom-tabs": "^6.5.11",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.9.17",
+    "@reduxjs/toolkit": "^1.9.7",
+    "@types/react-redux": "^7.1.30",
+    "@types/redux": "^3.6.0",
+    "formik": "^2.4.5",
+    "lottie-react-native": "^6.5.1",
     "react": "18.2.0",
-    "react-native": "0.74.3"
+    "react-native": "0.74.3",
+    "react-native-paper": "^5.12.4",
+    "react-native-portalize": "^1.0.7",
+    "react-native-safe-area-context": "^4.7.4",
+    "react-native-screens": "^3.27.0",
+    "react-native-svg": "^14.0.0",
+    "react-native-toast-message": "^2.2.0",
+    "react-redux": "^8.1.3",
+    "redux-persist": "^6.0.0",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -24,6 +44,7 @@
     "@types/react": "^18.2.6",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
+    "babel-plugin-module-resolver": "^5.0.2",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
