--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "@reduxjs/toolkit": "^1.9.7",
     "@types/react-redux": "^7.1.30",
     "@types/redux": "^3.6.0",
+    "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.0",
+    "events": "^3.3.0",
     "formik": "^2.4.5",
     "lottie-react-native": "^6.5.1",
     "react": "18.2.0",
@@ -29,8 +32,12 @@
     "react-native-screens": "^3.27.0",
     "react-native-svg": "^14.0.0",
     "react-native-toast-message": "^2.2.0",
+    "react-native-websocket": "^1.0.2",
     "react-redux": "^8.1.3",
     "redux-persist": "^6.0.0",
+    "stream-browserify": "^3.0.0",
+    "strophe.js": "^3.0.0",
+    "xmldom": "^0.6.0",
     "yup": "^1.3.2"
   },
   "devDependencies": {
@@ -47,8 +54,10 @@
     "babel-plugin-module-resolver": "^5.0.2",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
+    "node-libs-react-native": "^1.2.1",
     "prettier": "2.8.8",
     "react-native-device-info": "^10.11.0",
+    "react-native-svg-transformer": "^1.1.0",
     "react-test-renderer": "18.2.0",
     "typescript": "5.0.4"
   },
