--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "lottie-react-native": "^6.5.1",
     "react": "18.2.0",
     "react-native": "0.74.3",
+    "react-native-modal": "^13.0.1",
     "react-native-paper": "^5.12.4",
     "react-native-portalize": "^1.0.7",
     "react-native-safe-area-context": "^4.7.4",
@@ -43,6 +44,7 @@
     "@react-native/metro-config": "0.74.85",
     "@react-native/typescript-config": "0.74.85",
     "@types/react": "^18.2.6",
+    "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
     "babel-plugin-module-resolver": "^5.0.2",
