--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,8 @@
     "@reduxjs/toolkit": "^1.9.7",
     "@types/react-redux": "^7.1.30",
     "@types/redux": "^3.6.0",
+    "@xmpp/client": "^0.13.1",
+    "@xmpp/debug": "^0.13.0",
     "formik": "^2.4.5",
     "lottie-react-native": "^6.5.1",
     "react": "18.2.0",
@@ -46,6 +48,8 @@
     "@types/react": "^18.2.6",
     "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^18.0.0",
+    "@types/xmpp__client": "^0.13.3",
+    "@types/xmpp__debug": "^0.13.3",
     "babel-jest": "^29.6.3",
     "babel-plugin-module-resolver": "^5.0.2",
     "eslint": "^8.19.0",
