--- a/client/package.json
+++ b/client/package.json
@@ -32,6 +32,7 @@
     "react-native-screens": "^3.27.0",
     "react-native-svg": "^14.0.0",
     "react-native-toast-message": "^2.2.0",
+    "react-native-uuid": "^2.0.2",
     "react-native-websocket": "^1.0.2",
     "react-redux": "^8.1.3",
     "redux-persist": "^6.0.0",
