--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,8 @@
     "lottie-react-native": "^6.5.1",
     "react": "18.2.0",
     "react-native": "0.74.3",
+    "react-native-fs": "^2.20.0",
+    "react-native-image-picker": "^7.1.2",
     "react-native-modal": "^13.0.1",
     "react-native-paper": "^5.12.4",
     "react-native-portalize": "^1.0.7",
