--- a/client/package.json
+++ b/client/package.json
@@ -25,10 +25,13 @@
     "lottie-react-native": "^6.5.1",
     "react": "18.2.0",
     "react-native": "0.74.3",
+    "react-native-blob-util": "^0.19.11",
+    "react-native-document-picker": "^9.3.0",
     "react-native-fs": "^2.20.0",
     "react-native-image-picker": "^7.1.2",
     "react-native-modal": "^13.0.1",
     "react-native-paper": "^5.12.4",
+    "react-native-permissions": "^4.1.5",
     "react-native-portalize": "^1.0.7",
     "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "^3.27.0",
